# godot-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  board_data.gd  board_manager.gd  board_manager.gd.uid  card_data.gd.uid  kanban_card.gd  kanban_card.gd.uid  kanban_card.tscn  kanban_column.gd  kanban_column.gd.uid  kanban_column.tscn  main.gd  main.gd.uid  main.tscn  mcp_bridge_game.gd  mcp_bridge_game.gd.uid  mcp_ports.cfg  project.godot
addons/mcp_bridge/: plugin.cfg  plugin.gd  plugin.gd.uid
examples/cookie_clicker/: cookie_clicker.tscn
examples/crossword/: crossword.gd  crossword.tscn
examples/cube/: cube.tscn
examples/kanban/: board_data.gd.uid  card_data.gd  column_data.gd  column_data.gd.uid  kanban_card.tscn  kanban_column.gd  kanban_column.tscn  main.gd  main.tscn
examples/launcher/: launcher.tscn  nav_bar.gd  nav_bar.gd.uid
mcp/: godot_mcp_server.py  pyproject.toml
scripts/: capture_demo.py
